--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mercadopago": "^1.5.9",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15"
   },
   "scripts": {
